Added channel security control for specific bot commands

--- a/.env-example
+++ b/.env-example
@@ -5,7 +5,7 @@
 
 DISCORD_TOKEN="discord bot token here"
 DISCORD_GUILD="discord guild name here"
-DISCORD_CHANNEL="discord channel to respond to !commands here"
+CONTROL_CHANNEL="discord channel to respond to !commands here"
 API_KEY="youtube v3 API key here"
 BASE_URL="https://youtube.googleapis.com/youtube/v3/commentThreads?part=snippet&pert=replies&maxResults=100&order=time&allThreadsRelatedToChannelId="
 TIME_SUB=172800
