--- a/.env-example
+++ b/.env-example
@@ -9,4 +9,7 @@ CONTROL_CHANNEL="discord channel to respond to !commands here"
 API_KEY="youtube v3 API key here"
 BASE_URL="https://youtube.googleapis.com/youtube/v3/commentThreads?part=snippet&pert=replies&maxResults=100&order=time&allThreadsRelatedToChannelId="
 TIME_SUB=172800
-
+MYSQL_HOST=<mysql_host>
+MYSQL_DB=<mysql_db>
+MYSQL_USER=<mysql_user>
+MYSQL_PASS=<mysql_pass>
